--- a/RedisOnDotnet6Demo/RedisOnDotnet6Demo.csproj
+++ b/RedisOnDotnet6Demo/RedisOnDotnet6Demo.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.4" />
+    <PackageReference Include="StackExchange.Redis" Version="2.5.61" />
+  </ItemGroup>
+
 </Project>
