added readme and azure connection string

--- a/RedisOnDotnet6Demo/appsettings.json
+++ b/RedisOnDotnet6Demo/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Redis": "localhost:5002"
+    "Redis": "localhost:5002",
+    "RedisOnAzure": "redis-server-name.redis.cache.windows.net:6380,password=your-password,ssl=True,abortConnect=False"
   }
 }
